--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="obstacle">obstacle</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="pattern_navigation">Pattern Navigation</string>
+    <string name="needle_navigation">Neddle Navigation</string>
+    <string name="compass_navigation">Compass Navigation</string>
 </resources>
